test/invalid-semantics/60294_function_as_value/function_as_value.mag
-- Author: 60294, Pedro Rosa
fun succ (n): Int -> Int = n + 1
fun main (_): Unit -> Unit = 
    var myFunc: Int -> Int = succ;
    unit